--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@
 body {
   font-family: "Roboto", sans-serif;
   width: 100%;
+  user-select: none;
+  touch-action: none;
 }
 
 header {
@@ -46,8 +48,8 @@ header .cover-image {
   color: #58536e;
   text-align: center;
   letter-spacing: -0.004em;
-  font-size: 16px;
-  width: 75%;
+  font-size: 12px;
+  width: 90%;
   margin: 0 auto;
 }
 .first-desc {
@@ -97,7 +99,7 @@ header .cover-image {
   transform: translateY(-45px);
 }
 .arabellas img:hover {
-  transform: translateY(45px);
+  transform: translateY(15px);
 }
 
 .arabella-big {
@@ -133,7 +135,7 @@ header .cover-image {
 }
 
 .description-spaced {
-  line-height: 36px;
+  line-height: 26px;
 }
 
 .image-box {
@@ -157,21 +159,29 @@ footer {
   display: flex;
   justify-content: center;
   margin-top: var(--mt);
+  align-items: center;
 }
-.footer-links {
-  width: 90%;
+/* .footer-links {
+  
   margin: 75px auto;
   display: flex;
   align-items: center;
   justify-content: center;
-}
+} */
 
+.footer-wrapper {
+  width: 100%;
+}
 .footer-links {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 32px;
-  width: 100%;
+  gap: 12px;
+  flex-wrap: wrap;
+  flex-direction: column;
+  width: 90%;
+  margin: 0 auto;
+  text-align: center;
 }
 .footer-links a {
   color: #fff;
@@ -182,6 +192,16 @@ footer {
   .logo img {
     width: 630px;
   }
+  .arabellas img:hover {
+    transform: translateY(35px);
+  }
+  .footer-links {
+    flex-direction: row;
+  }
+
+  .description-spaced {
+    line-height: 36px;
+  }
 
   :root {
     --mb: 32px;
@@ -189,6 +209,9 @@ footer {
   }
   header {
     height: 70vh;
+  }
+  .description {
+    font-size: 16px;
   }
 
   .container {
